<resources>
    <string name="app_name">navbar</string>
    <string name="home">Home\n</string>
    <string name="footprint">Footprint</string>
    <string name="rewards">Rewards\n</string>
    <string name="profile">Profile</string>
    <string name="about">About\n</string>
    <string name="what">What YOU can do</string>
    <string name="bike">Change the way you travel</string>
    <string name="bikes">Embracing sustainable transportation practices is key for reducing carbon footprints. Opting for greener alternatives like walking, biking to campus, carpooling, and using public transportation can significantly reduce emissions.</string>
    <string name="energy">Reduce your energy</string>
    <string name="energys">Lorem ipsum dolor sit amet,  consectetur adipiscing elit,  sed do eiusmod tempor.</string>
    <string name="eat">Change what you eat</string>
    <string name="eats">One of the most beneficial actions you can take for the planet is to significantly adopting a healthy and balanced diet that includes a greater variety of plant-based foods, sourcing meat and fish from...</string>
    <string name="wastes">Reduce food waste</string>
    <string name="wastess">Lorem ipsum dolor sit amet, consectetur dipiscing elit, sed do eiusmod tempor. jsnncnjsncudcnccnsnksmxx\n</string>
    <string name="supportss">SUPPORT SUSTAINABILITY.\nCUT CARBON.\nGAIN REWARDS!</string>
    <string name="enterprise">Enterprises and Discounts</string>
    <string name="textssss">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</string>
    <string name="cverde">C Verde is an innovative platform that empower individuals and enterprises to take part in top-tier carbon activities.</string>
    <string name="learn">Learn More</string>
    <string name="action">Your actions are \nharming the environment.</string>
    <string name="foodwaste">Food Waste</string>
    <string name="kgss">10 kgs</string>
    <string name="thankyou">Thank you for making the effort to stay green!</string>
    <string name="food">Food</string>
    <string name="kgs">80 kgs</string>
    <string name="name">Hello, Juan Dela Cruz</string>
    <string name="text">You have emitted  120 kg CO2 this week</string>
    <string name="breakdown">Breakdown\n</string>
    <string name="c">About C Verde</string>
    <string name="abouts">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="points">POINTS: 85</string>
    <string name="collects">Collect points to redeem special awards</string>
    <string name="termsandcondition"><![CDATA[Privacy & Terms]]></string>
    <string name="textfour">Ensuring that the information you provide is accurate and up-to-date. Regularly updating the app to benefit from new features and improvements.</string>
    <string name="nofour">4. User Responsibilities You are responsible for:</string>
    <string name="textthree">C-Verde collects and processes personal information, such as your daily activities, energy usage, and travel habits, to calculate your carbon footprint.</string>
    <string name="nothree">3. Data Collection and Privacy</string>
    <string name="texttwo">Avoid any unauthorized access, tampering, or reverse engineering of the application.</string>
    <string name="texttwos">• Use the app for lawful purposes and in compliance with all applicable laws.</string>
    <string name="texttwosss">• Provide accurate data regarding your activities to ensure accurate carbon footprint tracking.</string>
    <string name="txttwo">C-Verde is a carbon footprint tracker that allows users to monitor and reduce their environmental impact. By using the application, you agree to:</string>
    <string name="notwo">2. Use of the Application</string>
    <string name="textone">By downloading, installing, or using the C-Verde application, you agree to be bound by these Terms and Conditions. If you do not agree to these terms, please do not use the application.</string>
    <string name="noone">1. Acceptance of Terms</string>
    <string name="termsacondition">Terms and Conditions\"</string>
    <string name="lastname">Last Name</string>
    <string name="games">Games</string>
    <string name="community">Community\n</string>
    <string name="based">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n</string>
    <string name="data">Based on your data</string>
    <string name="change">Change what you eat</string>
    <string name="changes">Change what you eat\nOne of the most benificial\nactions you can take for the\nplanet is to significantly adopting\na healthy and balanced diet that \nincludes a greater variety of \nplant-based foods, sourcing\nmeat and fish from.</string>
    <string name="egg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n</string>
    <string name="toas">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n</string>
    <string name="green">MOVE Green</string>
    <string name="move">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "</string>
    <string name="mins">20 mins</string>
    <string name="learnmore">Learn More\n</string>
    <string name="textransportaion">Small choices, big impact! Choose green travel and help the planet!</string>
    <string name="detail">Details</string>
    <string name="walk">Walking</string>
    <string name="transportation">Transportation</string>
    <string name="km">2355 km</string>
    <string name="liter">/ 0.4 liter</string>
    <string name="wkm">440 km</string>
    <string name="location">Your location</string>
    <string name="destination">Your destination</string>
    <string name="sphere">SPHERES IN A JAR</string>
    <string name="spheretxt">Replicate the Earth\'s major spheres by making a terrarium.</string>
    <string name="spheretxts">Replicate the Earth\'s\nmajor spehere by\nmaking a terrarium.</string>
    <string name="activity">Activity YOU can do</string>
    <string name="instruction">Instructions:\n\nYou will need</string>
    <string name="instructiontxt">• A container for your terrarium (you may repurpose a large clear wide-mouthed glass jar or a plastic bottle)\n• Small plants like ferns, golden pothos, or moss.\n• Small spade or tool for digging.</string>
    <string name="steps">Steps:</string>
    <string name="stepss">1. At the bottom of the jar, dampen the soil and dig enough space for your plants, covering their roots with soil.\n2. Close and seal the terrarium again, then place it near a sunny window.\n3. Observe your plant. Are they able to survive without being watered? Why?</string>
    <string name="eme">Terrarium Image</string>
    <string name="below">Replicate the Earth\'s major spheres by making a terrarium!</string>
    <string name="acknowledge">Acknowledgments</string>
    <string name="last">This app is informed by insights from Klimaalam written by Raissa Rivera Falgui illustrated by Harry Monzo (2022).</string>
</resources>